@@ -8,7 +8,7 @@
     <description>Jupyter notebook providing VTL support through Trevas engine</description>
     <artifactId>trevas-jupyter</artifactId>
     <groupId>fr.insee</groupId>
-    <version>0.4.2</version>
+    <version>0.5.0</version>
 
     <licenses>
         <license>
@@ -18,9 +18,9 @@
     </licenses>
 
     <properties>
-        <jdk.version>11</jdk.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <trevas.version>1.1.1</trevas.version>
+        <trevas.version>1.3.0</trevas.version>
         <spotless.version>2.43.0</spotless.version>
     </properties>
 
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.16.1</version>
+            <version>2.15.3</version>
         </dependency>
 
         <dependency>
@@ -99,18 +99,18 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-kubernetes_2.12</artifactId>
-            <version>3.3.1</version>
+            <version>3.5.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-aws</artifactId>
-            <version>3.3.6</version>
+            <version>3.3.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>3.3.6</version>
+            <version>3.3.4</version>
         </dependency>
 
         <dependency>
@@ -127,13 +127,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.10.1</version>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.25.2</version>
+            <version>3.25.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -153,6 +153,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <extraJvmArguments>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</extraJvmArguments>
                     <programs>
                         <program>
                             <mainClass>fr.insee.trevas.jupyter.VtlKernel</mainClass>
@@ -184,10 +185,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.12.1</version>
                 <configuration>
-                    <release>${jdk.version}</release>
-                    <testRelease>${jdk.version}</testRelease>
-                    <target>${jdk.version}</target>
-                    <source>${jdk.version}</source>
+                    <release>${java.version}</release>
+                    <testRelease>${java.version}</testRelease>
+                    <target>${java.version}</target>
+                    <source>${java.version}</source>
                 </configuration>
             </plugin>
             <plugin>
